Doc: fix doc and add image.

--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
         <!-- Sidebar -->
         <aside>
             <div class="profile-card">
-                <img src="https://picsum.photos/seed/dipakgiri/200/200" alt="Dipak Giri" class="avatar">
+                <img src="/public/images/avatar.jpg" alt="Dipak Giri" class="avatar">
                 <h1 class="name">Dipak Giri</h1>
-                <div class="role code-font">&lt;Senior_Data_Engineer /&gt;</div>
+                <div class="role code-font">&lt;Senior_Data_Engineer&gt;</div>
 
                 <div class="contact-row">
                     <i class="fas fa-envelope"></i>
@@ -442,8 +442,17 @@
                 </div>
                 <div class="contact-row">
                     <i class="fab fa-linkedin"></i>
-                    <span>linkedin.com/in/dipakgiri</span>
+                    <a href="https://www.linkedin.com/in/dipakgiri" target="_blank">
+                        <span>linkedin.com/in/dipakgiri</span>
+                    </a>
                 </div>
+                <div class="contact-row">
+                    <i class="fab fa-github"></i>
+                    <a href="https://github.com/dmgiri" target="_blank">
+                        <span>github.com/dmgiri</span>
+                    </a>
+                </div>
+
             </div>
 
             <div class="module">
@@ -517,7 +526,7 @@
             <section>
                 <div class="section-header">
                     <div class="section-icon"><i class="fas fa-network-wired"></i></div>
-                    <h2 class="section-title">Experience</h2>
+                    <h2 class="section-title">Work_Experience</h2>
                 </div>
 
                 <div class="timeline">
@@ -667,7 +676,7 @@
                 <div class="achievement-grid">
                     <!-- Patent -->
                     <div class="achievement-card">
-                        <div class="achievement-title"><i class="fas fa-file-contract code-font"></i> Patent Holder</div>
+                        <div class="achievement-title"><i class="fas fa-file-contract"></i> Patent Holder</div>
                         <div class="achievement-detail">
                             <strong>"A System for Wirelessly Sharing Battery Power Between Smartphone Devices"</strong><br>
                             <span class="code-font">IN 201721006728</span>
@@ -676,7 +685,7 @@
 
                     <!-- Award -->
                     <div class="achievement-card">
-                        <div class="achievement-title"><i class="fas fa-award code-font"></i> Award Winner</div>
+                        <div class="achievement-title"><i class="fas fa-award"></i> Award Winner</div>
                         <div class="achievement-detail">
                             <strong>1st Prize: Techno Sanjivani Project Exhibition</strong><br>
                             <span class="code-font">Sanjivani COE, Kopargaon</span>
