Doc: Update doc.

--- a/index.html
+++ b/index.html
@@ -404,6 +404,21 @@
             .skill-tag { border: 1px solid #000 !important; color: #000 !important; background: transparent !important; }
             .company-badge { background: #eee !important; color: #000 !important; }
         }
+        [data-theme="dark"] a {
+            color: #758397;
+        }
+        [data-theme="dark"] a:visited {
+            color: #758397;
+        }
+
+        -- Yellow color in light mode
+        a {
+            color: #758397;
+        }
+        a:visited {
+            color: #758397;
+        }
+
     </style>
 </head>
 <body>
@@ -443,13 +458,13 @@
                 <div class="contact-row">
                     <i class="fab fa-linkedin"></i>
                     <a href="https://www.linkedin.com/in/dipakgiri" target="_blank">
-                        <span>linkedin.com/in/dipakgiri</span>
+                        <span>www.linkedin.com/in/dipakgiri</span>
                     </a>
                 </div>
                 <div class="contact-row">
                     <i class="fab fa-github"></i>
                     <a href="https://github.com/dmgiri" target="_blank">
-                        <span>github.com/dmgiri</span>
+                        <span>www.github.com/dmgiri</span>
                     </a>
                 </div>
 
@@ -463,6 +478,7 @@
                     <span class="skill-tag">Python</span>
                     <span class="skill-tag">PySpark</span>
                     <span class="skill-tag">SQL</span>
+                    <span class="skill-tag">Data Modeling</span>
                     <span class="skill-tag">Databricks</span>
                     <span class="skill-tag">AWS S3</span>
                     <span class="skill-tag">PostgreSQL</span>
@@ -471,10 +487,9 @@
                     <span class="skill-tag">NiFi</span>
                     <span class="skill-tag">Talend</span>
                     <span class="skill-tag">Tidal</span>
-                    <span class="skill-tag">Git/GitHub</span>
+                    <span class="skill-tag">Git</span>
                     <span class="skill-tag">Jupyter</span>
                     <span class="skill-tag">Linux</span>
-                    <span class="skill-tag">Docker</span>
                 </div>
             </div>
 
