Ref: refactor name

--- a/project/index.html
+++ b/project/index.html
@@ -509,7 +509,7 @@
                         <i class="material-icons tiny" style="vertical-align: middle; margin-right: 5px;">auto_awesome</i> Next Batch Open
                     </div>
                     <h1>Master Python.<br>Build The Future.</h1>
-                    <p>The only "Bootcamp Style" Python course in Ahmednagar. <br>
+                    <p>The only "Bootcamp Style" Python course in AhilyaNagar. <br>
                     5 Days of Learning. 2 Days of Hard Coding. Real Projects.</p>
                     <div class="hide-on-small-only">
                         <a href="#pricing" class="btn-sleek waves-effect waves-light">Start Learning</a>
@@ -811,11 +811,11 @@
             <div class="row">
                 <div class="col s12 m5" data-aos="fade-right">
                     <h4 style="color: white;">Ready to Code?</h4>
-                    <p style="color: var(--text-secondary); margin-bottom: 30px;">Fill out form to reserve your spot for the next batch starting soon in Ahmednagar. Limited seats available.</p>
+                    <p style="color: var(--text-secondary); margin-bottom: 30px;">Fill out form to reserve your spot for the next batch starting soon in AhilyaNagar. Limited seats available.</p>
                     
                     <div style="margin-bottom: 20px;">
                         <i class="material-icons left" style="color: var(--accent-primary);">location_on</i>
-                        <span class="grey-text text-lighten-2" style="margin-left: 10px; line-height: 24px;">Ahmednagar, Maharashtra</span>
+                        <span class="grey-text text-lighten-2" style="margin-left: 10px; line-height: 24px;">AhilyaNagar, Maharashtra</span>
                     </div>
                     <div style="margin-bottom: 20px;">
                         <i class="material-icons left" style="color: var(--accent-primary);">email</i>
@@ -875,7 +875,7 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">PyMaster Academy</h5>
-                    <p class="grey-text text-lighten-4" style="opacity: 0.7;">Empowering college students in Ahmednagar with coding skills for the modern world.</p>
+                    <p class="grey-text text-lighten-4" style="opacity: 0.7;">Empowering college students in AhilyaNagar with coding skills for the modern world.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Links</h5>
