ref: Add dummy number.

--- a/project/index.html
+++ b/project/index.html
@@ -823,7 +823,7 @@
                     </div>
                     <div>
                         <i class="material-icons left" style="color: var(--accent-primary);">phone</i>
-                        <span class="grey-text text-lighten-2" style="margin-left: 10px; line-height: 24px;">+91 98765 43210</span>
+                        <span class="grey-text text-lighten-2" style="margin-left: 10px; line-height: 24px;">+91 11875 43210</span>
                     </div>
                 </div>
                 <div class="col s12 m7" data-aos="fade-left">
@@ -895,7 +895,7 @@
     </footer>
 
     <!-- Whatsapp Float -->
-    <a href="https://wa.me/919876543210" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/###" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
