Ref: refactor the code.

--- a/project/index.html
+++ b/project/index.html
@@ -624,7 +624,7 @@
                         </div>
                         <div class="teacher-content">
                             <div class="teacher-role">Lead Instructor & Data Engineer</div>
-                            <h5 style="margin: 5px 0; font-size: 1.3rem;">Alex Johnson</h5>
+                            <h5 style="margin: 5px 0; font-size: 1.3rem;">Dipak Giri</h5>
                             
                             <div style="margin: 15px 0;">
                                 <span class="stat-badge"><i class="material-icons tiny" style="margin-right:5px;">work</i>Data Engineer</span>
