--- a/project/index.html
+++ b/project/index.html
@@ -464,7 +464,7 @@
             <div class="nav-wrapper container">
                 <a href="#" class="brand-logo">
                     <i class="material-icons">terminal</i>
-                    <span>PyMaster</span>
+                    <span>PyDJ</span>
                 </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 
@@ -487,7 +487,7 @@
             </div>
             <a href="#user"><img class="circle" src="https://i.pravatar.cc/150?u=a042581f4e29026704d"></a>
             <a href="#name"><span class="white-text name">Student</span></a>
-            <a href="#email"><span class="white-text email">student@pymaster.com</span></a>
+            <a href="#email"><span class="white-text email">student@PyDJ.com</span></a>
         </div></li>
         <li><a href="#methodology" class="white-text"><i class="material-icons">school</i>Methodology</a></li>
         <li><a href="#mentors" class="white-text"><i class="material-icons">people</i>Mentors</a></li>
@@ -819,7 +819,7 @@
                     </div>
                     <div style="margin-bottom: 20px;">
                         <i class="material-icons left" style="color: var(--accent-primary);">email</i>
-                        <span class="grey-text text-lighten-2" style="margin-left: 10px; line-height: 24px;">learn@pymaster.com</span>
+                        <span class="grey-text text-lighten-2" style="margin-left: 10px; line-height: 24px;">learn@PyDJ.com</span>
                     </div>
                     <div>
                         <i class="material-icons left" style="color: var(--accent-primary);">phone</i>
@@ -874,7 +874,7 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="white-text">PyMaster Academy</h5>
+                    <h5 class="white-text">PyDJ Academy</h5>
                     <p class="grey-text text-lighten-4" style="opacity: 0.7;">Empowering college students in AhilyaNagar with coding skills for the modern world.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
@@ -889,7 +889,7 @@
         </div>
         <div class="footer-copyright" style="background: rgba(0,0,0,0.2);">
             <div class="container center-align">
-                © 2023 PyMaster Academy. All Rights Reserved.
+                © 2026 PyDJ Academy. All Rights Reserved.
             </div>
         </div>
     </footer>
